# router/router.go
@@ -13,9 +13,7 @@ import (
 	_ "github.com/Yoshikrit/fiber-test/docs"
 )
 
-func NewRouter(db *gorm.DB) *fiber.App {
-	router := fiber.New()
-
+func NewRouter(router *fiber.App, db *gorm.DB) *fiber.App {
 	router.Get("/swagger/*", swagger.HandlerDefault)
 	router.Get("/metrics", middleware.Metrics())
 
@@ -24,12 +22,32 @@ func NewRouter(db *gorm.DB) *fiber.App {
 
 	router.Get("/healthcheck", healthCheckHandler.HealthCheck)
 
-	//producttype
+	//auths
+	userRepository := repository.NewUserRepositoryImpl(db)
+	roleRepository := repository.NewRoleRepositoryImpl(db)
+	oauthRepository := repository.NewOauthRepositoryImpl(db)
+	authService := service.NewAuthServiceImpl(userRepository, roleRepository, oauthRepository)
+	authHandler := handler.NewAuthHandler(authService)
+
+	authRouter := router.Group("/auths")
+
+	authRouter.Post("/", authHandler.Register)
+	authRouter.Post("/login", authHandler.Login)
+	authRouter.Post("/reflesh", authHandler.Reflesh)
+	authRouter.Route("logout/:id", func(router fiber.Router) {
+		router.Delete("/", authHandler.Logout)
+	})
+
+	//create jwt middleware
+	jwtMiddleware := middleware.NewJWTMiddleware(userRepository, oauthRepository, roleRepository)
+
+	//producttypes
 	prodTypeRepository := repository.NewProductTypeRepositoryImpl(db)
 	prodTypeService := service.NewProductTypeServiceImpl(prodTypeRepository)
 	prodTypeHandler := handler.NewProductTypeHandler(prodTypeService)
 
-	productTypeRouter := router.Group("/producttype")
+    productTypeRouter := router.Group("/producttypes")
+	productTypeRouter.Use(jwtMiddleware)
 	
 	productTypeRouter.Post("/", prodTypeHandler.Create)
 	productTypeRouter.Get("/", prodTypeHandler.FindAll)
@@ -40,7 +58,6 @@ func NewRouter(db *gorm.DB) *fiber.App {
 		router.Put("/", prodTypeHandler.Update)
 		router.Delete("/", prodTypeHandler.Delete)
 	})
-
 
 	return router
 }
